--- a/cs/kap05.tex
+++ b/cs/kap05.tex
@@ -167,7 +167,7 @@ V předchozí kapitole jsme navrhli strukturu, které se náš projekt bude drž
 
 \section{Stabilita simulace} \label{simulationStabilitySection}
 
-Nyní by čtenář měl mít hrubý přehled o celkovém vnitřním fungování našeho systému. V této sekci se do detailu zaměříme na nečekané překážky, které nám v průběhu implementace postavil do cesty fyzikální subsystém, a vysvětlíme, jakým způsobem byly vyřešeny.
+Nyní by čtenář měl mít hrubý přehled o celkovém vnitřním fungování našeho systému. V této sekci se do detailu zaměříme na nečekané překážky, které nám v průběhu implementace postavil do cesty fyzikální subsystém, a vysvětlíme, jakým způsobem byly překonány.
 
 
 \subsection{Jak nastavit cílovou rotaci jointu} \label{howToSetJointsTargetRotationSection}
